fixed plugin display for light dark mode

--- a/src/css/sass/_global.sass
+++ b/src/css/sass/_global.sass
@@ -21,6 +21,8 @@ code
 
 html
 	position: relative
+	background: var(--c-bg)
+	overflow-x: hidden
 
 body
 	margin: auto
